# REM.api

./: .env  .replit  README.md  __main__.py  db.py  main.py  pyproject.toml  requirements.txt  test.py
backend/: __init__.py  db.py  main.py
backend/controllers/: user.py
config/: auth.py  secret_key.py
controllers/: bot.py  user.py
routes/: bots.py  users.py
views/: helper.py
